--- a/chrome/os_target/win/menu.css
+++ b/chrome/os_target/win/menu.css
@@ -45,7 +45,8 @@
 /* ::::: menu/menuitem ::::: */
 
 menu,
-menuitem {
+menuitem,
+.splitmenu-menuitem {
   -moz-appearance: menuitem;
   -moz-box-align: center;
   color: MenuText;
@@ -58,20 +59,28 @@ menuitem[default="true"] {
   font-weight: bold;
 }
 
-menu[disabled="true"], menuitem[disabled="true"],
+menu[disabled="true"],
+menuitem[disabled="true"],
+.splitmenu-menuitem[disabled="true"],
 menu[_moz-menuactive="true"][disabled="true"],
-menuitem[_moz-menuactive="true"][disabled="true"] {
+menuitem[_moz-menuactive="true"][disabled="true"],
+.splitmenu-menuitem[_moz-menuactive="true"][disabled="true"] {
   color: GrayText;
+  text-shadow: none;
 }
 
-menu[disabled="true"]:not([_moz-menuactive="true"]):-moz-system-metric(windows-classic),
-menuitem[disabled="true"]:not([_moz-menuactive="true"]):-moz-system-metric(windows-classic) {
-  color: ThreeDShadow;
-  text-shadow: 1px 1px ThreeDHighlight;
+@media all and (-moz-windows-classic) {
+  menu[disabled="true"],
+  menubar > menu[disabled="true"][_moz-menuactive="true"],
+  menuitem[disabled="true"],
+  .splitmenu-menuitem[disabled="true"] {
+    color: ThreeDShadow;
+    text-shadow: 1px 1px ThreeDHighlight;
+  }
 }
 
 menuitem.spell-suggestion {
-  font-weight:bold;
+  font-weight: bold;
 }
 
 /* ..... internal content .... */
@@ -120,7 +129,8 @@ menuitem.spell-suggestion {
 }
 
 menu.menu-iconic > .menu-iconic-left,
-menuitem.menuitem-iconic > .menu-iconic-left {
+menuitem.menuitem-iconic > .menu-iconic-left,
+.splitmenu-menuitem[iconic="true"] > .menu-iconic-left {
   -moz-appearance: menuimage;
   padding-top: 2px;
 }
@@ -140,12 +150,32 @@ menuitem.menuitem-iconic > .menu-iconic-left {
 menubar > menu {
   border: 2px solid transparent;
 }
+
+menubar > menu[_moz-menuactive="true"]:not([disabled="true"]) {
+  color: -moz-menubarhovertext;
+}
+
 menubar > menu[_moz-menuactive="true"][open="true"] {
   border-width: 3px 1px 1px 3px;
 }
-menubar > menu[_moz-menuactive="true"],
-menubar > menu[_moz-menuactive="true"][open="true"] {
-  color: -moz-menubarhovertext;
+
+menubar > menu:-moz-lwtheme {
+  -moz-appearance: none;
+  border-style: none;
+}
+
+menubar > menu:-moz-lwtheme:not([disabled="true"]) {
+  color: inherit !important;
+}
+
+menubar > menu:-moz-lwtheme[_moz-menuactive="true"]:not([disabled="true"]) {
+  background-color: Highlight;
+  color: HighlightText !important;
+  text-shadow: none;
+}
+
+menubar > menu:-moz-window-inactive {
+  color: ThreeDShadow;
 }
 
 /* ..... internal content .... */
@@ -162,16 +192,13 @@ menubar > menu[_moz-menuactive="true"][open="true"] {
 /* ::::: menu/menuitems in popups ::::: */
 
 menupopup > menu,
-popup > menu,
-menupopup > menuitem,
-popup > menuitem {
+menupopup > menuitem {
   max-width: 42em;
 }
 
-menupopup > menu[_moz-menuactive="true"],
-menupopup > menuitem[_moz-menuactive="true"],
-popup > menu[_moz-menuactive="true"],
-popup > menuitem[_moz-menuactive="true"] {
+menu[_moz-menuactive="true"],
+menuitem[_moz-menuactive="true"],
+.splitmenu-menuitem[_moz-menuactive="true"] {
   background-color: -moz-menuhover;
   color: -moz-menuhovertext;
 }
@@ -184,10 +211,7 @@ menulist > menupopup > menuitem,
 menulist > menupopup > menu {
   -moz-appearance: none;
   border: 1px solid transparent;
-  padding-top: 1px;
-  -moz-padding-end: 30px;
-  padding-bottom: 1px;
-  -moz-padding-start: 5px;
+  padding: 1px 5px;
   max-width: none;
   font: message-box;
   color: -moz-FieldText;
@@ -209,7 +233,7 @@ menulist > menupopup > menu > label {
   padding-bottom: 0px;
 }
 
-menulist > menupopup > menuitem[_moz-menuactive="true"] {
+menulist:-moz-focusring > menupopup > menuitem[_moz-menuactive="true"] {
   border: 1px dotted #F5DB95;
   background-color: highlight;
   color: highlighttext;
@@ -285,4 +309,15 @@ menulist > menupopup > menuseparator,
   -moz-margin-start: -2px;
   list-style-image: url("chrome://global/skin/columnselect.gif");
   -moz-image-region: auto;
+}
+
+@media all and (-moz-windows-default-theme) {
+  menubar > menu:-moz-lwtheme {
+    -moz-appearance: menuitem;
+  }
+
+  menubar > menu:-moz-lwtheme[_moz-menuactive="true"]:not([disabled="true"]) {
+    color: inherit !important;
+    text-shadow: inherit;
+  }
 }
